<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/additem_background"
    tools:context=".update_delete_item">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="134dp"
        android:layout_height="122dp"
        android:layout_marginTop="116dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/asus" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="115dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:text="@string/edititem_header"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="286dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="252dp"
        android:autoText="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:text="1201-S"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="286dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="304dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="H110M-CS DDR4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="286dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="404dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="286dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="356dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="ASUS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/update_btn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/roundedbutton2"
        android:text="@string/update_btn_txt"
        android:textColor="#ffffff"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/delete_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/delete_btn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/roundedbutton3"
        android:text="@string/delete_btn_txt"
        android:textColor="#ffffff"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/update_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>